# backend/openapi.json
@@ -1197,6 +1197,47 @@
         ]
       }
     },
+    "/api/notifications": {
+      "delete": {
+        "operationId": "disconnect_notifications_api_notifications_delete",
+        "responses": {
+          "204": {
+            "description": "Successful Response"
+          }
+        },
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ],
+        "summary": "Disconnect Notifications",
+        "tags": [
+          "notifications"
+        ]
+      },
+      "get": {
+        "operationId": "get_notifications_api_notifications_get",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            },
+            "description": "Successful Response"
+          }
+        },
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ],
+        "summary": "Get Notifications",
+        "tags": [
+          "notifications"
+        ]
+      }
+    },
     "/api/tags": {
       "get": {
         "operationId": "list_tags_api_tags_get",
